cluster/k8s/oci-cache/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oci-cache
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    goldilocks.fairwinds.com/vpa-update-mode: "auto"
    rbac.ducktape.io/agent-readable-logs: "true"
