cluster/k8s/oci-cache/image-factory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talos-image-factory
  namespace: oci-cache
  labels:
    app.kubernetes.io/name: talos-image-factory
spec:
  selector:
    app.kubernetes.io/name: talos-image-factory
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 2122
      targetPort: metrics
      protocol: TCP
